tests/ui/deduplicate-diagnostics.duplicate.stderr
error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument

error: cannot find derive macro `Unresolved` in the crate root
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^ not found in the crate root

error: cannot find derive macro `Unresolved` in the crate root
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^ not found in the crate root
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0452]: malformed lint attribute input
  --> $DIR/deduplicate-diagnostics.rs:8:8
   |
LL | #[deny("literal")]
   |        ^^^^^^^^^ bad attribute argument
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0452`.
